# terrapyconvert

./: .gitignore  LICENSE  README.md  TESTING.md  examples.py  pyproject.toml  setup.py
terrapyconvert/: __init__.py
terrapyconvert/projection/: __init__.py  airocean.py  conformal_estimate.py  geographic_projection.py  inverted_orientation.py  orientation.py  scale_projection.py  upright_orientation.py
terrapyconvert/projection/base/: __init__.py  projection_transform.py
terrapyconvert/projection/core/: __init__.py  airocean.py  conformal_estimate.py  modified_airocean.py
terrapyconvert/projection/data/: __init__.py  conformal.py  conformal.txt
terrapyconvert/projection/resources/: __init__.py  conformal.py
terrapyconvert/projection/transforms/: __init__.py  inverted_orientation.py  scale_projection.py  upright_orientation.py
terrapyconvert/projection/utils/: __init__.py  invertable_vector_field.py
tests/: test_conversion.py
